# finddup

./: .gitignore  CHANGELOG.md  README.md  benchmark  finddup.py  finddup_new.py  finddup_old.py  pylintrc  pyproject.toml  setup.cfg  setup.py  tictoc.py
archive/: filesize_stats.txt  requirements.txt
src/finddup/: finddup.py  main.py
