[metadata]
name = finddup
version = 0.2.0
author = Matthew A. Clapp
author_email = Matther Clapp <itsayellow+dev@gmail.com>
description = Find all duplicate and uniqe files based on file data.
long_description = file: README.md
long_description_content_type = text/x-rst
url = https://github.com/itsayellow/finddup
keywords =
    = duplicate
    = files
classifiers =
    Development Status :: 3 Alpha
    Intended Audience :: Developers
    Natural Language :: English
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.5
install_requires =
    tictoc @ git+https://github.com/itsayellow/tictoc@master
zip_safe = true

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    finddup = finddup.main:cli
